--- a/styles/globals.css
+++ b/styles/globals.css
@@ -231,9 +231,11 @@
         url(/img/back.jpg);
     background-size: cover;
     background-position: center;
-/* 
+
+}
+
+.cards-home{
     display: grid;
-    grid-template-rows: repeat(6, [row-start] 1fr [row-end]);
-    grid-template-columns: repeat(6, [col-start] 1fr [col--end]); */
-    /* align-items: center; */
+    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    
 }
