--- a/styles/globals.css
+++ b/styles/globals.css
@@ -237,5 +237,7 @@
 .cards-home{
     display: grid;
     grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+ /* justify-content: center; */
+    align-items: center;
     
 }
