--- a/styles/globals.css
+++ b/styles/globals.css
@@ -236,7 +236,7 @@
 
 .cards-home{
     display: grid;
-    grid-template-columns: repeat(auto-fill,minmax(300px,1fr));
+    grid-template-columns: repeat(auto-fit,minmax(300px,1fr));
  /* justify-content: center; */
     align-items: center;
     
